fdo#80555: Set position of GraphicObjectShape objects correctly

Added a unit test for this issue.

Change-Id: I13656f82c97e5bb8458cdc1cb47ddcc5f6d60330